--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.8",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@graphql-codegen/cli": "^2.6.2",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +17,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "graphql": "^16.5.0",
+    "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -45,9 +50,9 @@
     ]
   },
   "devDependencies": {
-    "@graphql-codegen/typescript-operations": "2.4.2",
+    "@graphql-codegen/cli": "2.6.2",
     "@graphql-codegen/typescript": "2.5.1",
-    "@graphql-codegen/typescript-react-apollo": "3.2.16",
-    "@graphql-codegen/cli": "2.6.2"
+    "@graphql-codegen/typescript-operations": "2.4.2",
+    "@graphql-codegen/typescript-react-apollo": "3.2.16"
   }
 }
