--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.1.5",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "subscriptions-transport-ws": "^0.11.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
